@startuml
title Update aircraft status - Class Diagram

package "Aircraft Aggregate"{

    class Aircraft <<root>>{
           - registration_id: String
           - status: AircraftStatus
           ---
           +updateStatus(AircraftStatus newStatus)
    }

    enum AircraftStatus <<enum>> {
        ACTIVE
        INACTIVE
        UNDER_MAINTENANCE
    }

    class UpdateAircraftStatusService <<Domain Service>>{
           ---
           +updateStatus(String registrationNumber, AircraftStatus newStatus): Aircraft
    }

   interface AircraftRepository{
           ---
           + Optional<Aircraft> findById(String registrationNumber)
           + Aircraft save(Aircraft)
   }

    UpdateAircraftStatusService ..> Aircraft : updates >
    UpdateAircraftStatusService ..> AircraftRepository : uses >
    Aircraft --> AircraftStatus : has >
}

@enduml